--- a/apps/pool-manager/pyproject.toml
+++ b/apps/pool-manager/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 aws-lambda-powertools = {extras = ["tracer"], version = "^2.3.1"}
+pylint = "^3.2.4"
 
 [build-system]
 requires = ["poetry-core"]
