--- a/apps/pool-manager/stacks/sandbox-administrator-account/pool-manager.yml
+++ b/apps/pool-manager/stacks/sandbox-administrator-account/pool-manager.yml
@@ -26,7 +26,7 @@ Resources:
     Properties:
       Handler: pool_manager.main.handler
       Runtime: python3.12
-      CodeUri: ../../../apps/pool_manager/build
+      CodeUri: ../../build
       Role: !GetAtt FunctionExecutionRole.Arn
       FunctionName: !Sub "${Environment}-aws-sandbox-accounts-pool-manager"
       MemorySize: 256
