--- a/ci/codepipeline.yml
+++ b/ci/codepipeline.yml
@@ -79,6 +79,24 @@ Resources:
               Name: CodeBuild
               Configuration:
                 ProjectName: !Ref CodeBuildProject
+        - Name: Deploy-Common-Resources-To-Live
+          Actions:
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuiltSource
+              RunOrder: 1
+              Name: Pool-Store
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: live-aws-sandbox-accounts-pool-store
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuiltSource::common-resources/sandbox-administrator-account/pool-store/pool-store.yml
+                TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/pool-store/parameters/live.json
         - Name: Deploy-Lambdas-To-Live
           Actions:
             - ActionTypeId:
