--- a/common-resources/sandbox-administrator-account/pool-store/pool-store.yml
+++ b/common-resources/sandbox-administrator-account/pool-store/pool-store.yml
@@ -4,6 +4,7 @@ Parameters:
     Description: The infrastructure environment
     Type: String
     AllowedValues:
+      - test
       - live
 Resources:
   ReportTable:
