--- a/common-resources/sandbox-administrator-account/pool-store/pool-store.yml
+++ b/common-resources/sandbox-administrator-account/pool-store/pool-store.yml
@@ -17,11 +17,22 @@ Resources:
           AttributeType: S
         - AttributeName: sk
           AttributeType: S
+        - AttributeName: status
+          AttributeType: S
       KeySchema:
         - AttributeName: pk
           KeyType: HASH
         - AttributeName: sk
           KeyType: RANGE
+      LocalSecondaryIndexes:
+        - IndexName: status
+          KeySchema:
+            - KeyType: HASH
+              AttributeName: pk
+            - KeyType: RANGE
+              AttributeName: status
+          Projection:
+            ProjectionType: ALL
       BillingMode: PAY_PER_REQUEST
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: true
