--- a/ci/codepipeline.yml
+++ b/ci/codepipeline.yml
@@ -115,7 +115,7 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuiltSource::common-resources/sandbox-administrator-account/pool-store/pool-store.yml
                 TemplateConfiguration: BuiltSource::common-resources/sandbox-administrator-account/pool-store/parameters/live.json
-        - Name: Deploy-Lambdas-To-Live
+        - Name: Deploy-Apps-To-Live
           Actions:
             - ActionTypeId:
                 Category: Deploy
@@ -125,12 +125,12 @@ Resources:
               InputArtifacts:
                 - Name: BuiltSource
               RunOrder: 1
-              Name: Pool-Manager
+              Name: Account-Manager
               Configuration:
                 ActionMode: REPLACE_ON_FAILURE
                 Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
-                StackName: live-aws-sandbox-accounts-pool-manager
+                StackName: live-aws-sandbox-accounts-account-manager
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
-                TemplatePath: BuiltSource::apps/pool-manager/stacks/sandbox-administrator-account/pool-manager.yml
-                TemplateConfiguration: BuiltSource::apps/pool-manager/stacks/sandbox-administrator-account/parameters/pool-manager/live.json
+                TemplatePath: BuiltSource::apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+                TemplateConfiguration: BuiltSource::apps/account-manager/stacks/sandbox-administrator-account/parameters/account-manager/live.json
 
