--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -100,3 +100,7 @@ Resources:
                   End: true
                   Parameters:
                     ProjectName: !Ref CodeBuildProject
+                    EnvironmentVariablesOverride:
+                      - Type: PLAINTEXT
+                        Name: ACCOUNT_ID
+                        Value.$: $$.Map.Item.Value.sk.S
