add missing perm

--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -61,6 +61,13 @@ Resources:
                     - codebuild:StartBuild
                   Resource:
                     - !GetAtt CodeBuildProject.Arn
+                - Effect: Allow
+                  Action:
+                  - events:PutTargets
+                  - events:PutRule
+                  - events:DescribeRule
+                  Resource:
+                  - !Sub "arn:aws:events:${AWS::Region}:${AWS::AccountId}:rule/StepFunctionsGetEventForCodeBuildStartBuildRule"
   StateMachine:
     Type: AWS::StepFunctions::StateMachine
     Properties:
