--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@ cython_debug/
 # draw.io temp files
 *.drawio.bkp
 *.drawio.dtmp
+
+# "compiled" aws-nuke config
+apps/account-manager/aws-nuke.yml
