--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -106,6 +106,7 @@ Resources:
                 AWSNuke:
                   Type: Task
                   Resource: arn:aws:states:::codebuild:startBuild.sync
+                  TimeoutSeconds: 900
                   End: true
                   Parameters:
                     ProjectName: !Ref CodeBuildProject
