--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -59,6 +59,8 @@ Resources:
                 - Effect: Allow
                   Action:
                     - codebuild:StartBuild
+                    - codebuild:StopBuild
+                    - codebuild:BatchGetBuilds
                   Resource:
                     - !GetAtt CodeBuildProject.Arn
                 - Effect: Allow
