--- a/apps/account-manager/pyproject.toml
+++ b/apps/account-manager/pyproject.toml
@@ -5,6 +5,7 @@ description = "manage aws sandbox accounts"
 authors = ["Alex Chesters <alex@cheste.rs>"]
 license = "MIT"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
