--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -122,7 +122,8 @@ Resources:
                         Name: ACCOUNT_ID
                         Value.$: $.account_id
                   Catch:
-                    - ErrorEquals: States.ALL
+                    - ErrorEquals:
+                        - States.ALL
                       Next: MarkAccountAsFailed
                 MarkAccountAsFailed:
                   Type: Task
