add result path

--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -145,6 +145,7 @@ Resources:
                     Resource: arn:aws:states:::codebuild:startBuild.sync
                     TimeoutSeconds: 900
                     Next: MarkAccountAsReady
+                    ResultPath: null
                     Parameters:
                       ProjectName: !Ref CodeBuildProject
                       EnvironmentVariablesOverride:
