--- a/apps/account-manager/aws-nuke.template.yml
+++ b/apps/account-manager/aws-nuke.template.yml
@@ -27,6 +27,7 @@ account-blocklist:
 resource-types:
   excludes:
     - S3Object # Let the S3Bucket delete all Objects instead of individual objects (optimization)
+    - OSPackage # these are provided by AWS and cannot be deleted (https://github.com/rebuy-de/aws-nuke/issues/1123)
 
 presets:
   sso:
