--- a/apps/account-manager/aws-nuke.template.yml
+++ b/apps/account-manager/aws-nuke.template.yml
@@ -27,7 +27,6 @@ account-blocklist:
 resource-types:
   excludes:
     - S3Object # Let the S3Bucket delete all Objects instead of individual objects (optimization)
-    - OSPackage # these are provided by AWS and cannot be deleted (https://github.com/rebuy-de/aws-nuke/issues/1123)
 
 presets:
   sso:
@@ -100,9 +99,14 @@ presets:
         - audit-trail
       SNSTopic:
         - notification-topic
+  aws_things_that_cannot_be_deleted:
+    OSPackage:
+      - type: glob
+        value: "G*"
 
 accounts:
   REPLACE_ME:
     presets:
       - "sso"
       - "organisation"
+      - "aws_things_that_cannot_be_deleted"
