--- a/apps/account-manager/buildspec.yml
+++ b/apps/account-manager/buildspec.yml
@@ -14,4 +14,6 @@ phases:
       - make install
       - make nuke-config
       # TODO: audit resources that would be removed before adding no dry run flag
-      - ./aws-nuke-v2.25.0-linux-amd64 --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3
+      - ./aws-nuke-v2.25.0-linux-amd64 --config aws-nuke.yml --assume-role-arn "arn:aws:iam::$ACCOUNT_ID:role/aws-sandbox-accounts-aws-nuke" --force --force-sleep 3 > nuke_output.txt
+      - echo "the following resources would be removed"
+      - cat resources.txt | grep "would remove"
