--- a/apps/account-manager/aws-nuke.template.yml
+++ b/apps/account-manager/aws-nuke.template.yml
@@ -69,6 +69,9 @@ presets:
         # AWS Organizations resources
         - property: RoleName
           value: "OrganizationAccountAccessRole"
+        # aws-sandbox-accounts
+        - type: glob
+          value: "aws-sandbox-accounts-*"
         # StackSets
         - type: glob
           value: "stacksets-exec-*"
