fix nuke config

--- a/apps/account-manager/aws-nuke.template.yml
+++ b/apps/account-manager/aws-nuke.template.yml
@@ -82,6 +82,9 @@ presets:
         # AWS Organizations resources
         - property: RoleName
           value: "OrganizationAccountAccessRole"
+        # aws-sandbox-accounts
+        - type: glob
+          value: "aws-sandbox-accounts-*"
         # StackSets
         - property: RoleName
           type: glob
